--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="profile-container">
             <img src="profile.jpg" alt="Profile Picture" class="profile-picture">
             <h1 class="name">Emmanuel</h1>
-            <p class="passion">Empowering youth in Africa through technology, STEM, and education.</p>
+            <p class="passion">Empowering youth in South Sudan & Africa through technology, STEM advocacy, and education.</p>
 
             <!-- Social Icons -->
             <div class="social-icons">
